<resources>
    <string name="app_name">Hanbat</string>

    <string name="calendar">일정</string>
    <string name="map">MAP</string>
    <string name="notification">공지</string>
    <string name="str_done">완료</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="weather_icon">Weather icon</string>
    <string name="event_icon">Event icon</string>
    <string name="add_thing">일정추가</string>
    <string name="daily">일간</string>
    <string name="weekly">주간</string>
    <string name="monthly">월간</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="month">월</string>

    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>

    <string name="h6">6시</string>
    <string name="h7">7시</string>
    <string name="h8">8시</string>
    <string name="h9">9시</string>
    <string name="h10">10시</string>
    <string name="h11">11시</string>
    <string name="h12">12시</string>
    <string name="h13">13시</string>
    <string name="h14">14시</string>
    <string name="h15">15시</string>
    <string name="h16">16시</string>
    <string name="h17">17시</string>
    <string name="h18">18시</string>
    <string name="h19">19시</string>
    <string name="h20">20시</string>
    <string name="h21">21시</string>
    <string name="h22">22시</string>
    <string name="h23">23시</string>

    <string name="add">추가</string>

</resources>
