<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <include layout="@layout/bottom" />
    </LinearLayout>

    <TextView
        android:id="@+id/this_month_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textSize="20sp"
        android:textColor="#888888" />

    <LinearLayout
        android:id="@+id/day_name_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/this_month_tv"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="#FF0000"
            android:text="@string/sun"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="@string/mon"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="@string/tue"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="@string/wed"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="@string/thu"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="@string/fri"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="#0000FF"
            android:text="@string/sat"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom"
        android:layout_below="@id/day_name_ll">

        <fragment
            android:id="@+id/monthly"
            android:name="pumpkin.kr.hanbat.calendar.MonthlyFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

</RelativeLayout>